--- a/style.css
+++ b/style.css
@@ -1,3 +1,45 @@
-#canvas{
+/* #canvas{
   border: 4px solid black;
+} */
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+#canvas {
+  width: 1280px;
+  height: 720px;
+  background: white;
+  z-index: 0;
+}
+
+/* #c2 {
+  position: relative;
+  width: 1200px;
+  height: 720px;
+  top: -724px;
+  background: none;
+  z-index: 1;
+} */
+body {
+  background: white;
+  color: white;
+  margin: 40px;
+}
+
+#main {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  width: 1280px;
+  height: 720px;
+  text-align: center;
+}
+
+#menu {
+  position: relative;
+  left: 50%;
+  top: 0;
+  transform: translate(-50%);
+  text-align: center;
 }
