--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 }
 
 #canvas {
-  width: 1280px;
-  height: 720px;
+  width: 300px;
+  height: 300px;
   background: white;
   z-index: 0;
 }
@@ -28,11 +28,12 @@ body {
 }
 
 #main {
+  border: 4px solid black;
   position: absolute;
   left: 50%;
   transform: translate(-50%);
-  width: 1280px;
-  height: 720px;
+  width: 300px;
+  height: 300px;
   text-align: center;
 }
 
